force-app/main/default/objects/Wine__c/Wine__c.object-meta.xml
<CustomObject>
    <label>Wine</label>
    <nameField>
        <label>Wine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>