force-app/main/default/objects/Wine__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>