force-app/main/default/objects/Wine__c/fields/Region_1__c.field-meta.xml
<CustomField>
    <fullName>Region_1__c</fullName>
    <label>Region 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>