force-app/main/default/objects/Wine__c/fields/Region_2__c.field-meta.xml
<CustomField>
    <fullName>Region_2__c</fullName>
    <label>Region 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>