force-app/main/default/objects/Wine__c/fields/UPC_Code__c.field-meta.xml
<CustomField>
    <fullName>UPC_Code__c</fullName>
    <label>UPC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>