force-app/main/default/objects/Wine__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <label>Variety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wine_Variety</valueSetName>
    </valueSet>
</CustomField>