force-app/main/default/objects/Wine__c/fields/Winery__c.field-meta.xml
<CustomField>
    <fullName>Winery__c</fullName>
    <label>Winery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>